# data-platform

./: .env.local.example  .gitignore  README.md  mise.toml  pyproject.toml
catalog/ddl/refined/sample/: orders.sql
docker/: compose.yml
docker/iceberg-rest/: Dockerfile
docs/: spark-app-framework.md
docs/spark-app/: config.md  datasets.md  lifecycle.md
fixtures/: orders.parquet
notebooks/: sample.ipynb  spark_local.py
spark_app/: entrypoint.py
spark_app/catalog/: apply.py
spark_app/catalog/ddl/: app.py
spark_app/common/: app_factory.py  base.py  notebook.py  spark_session.py
spark_app/common/bases/: base.py  batch.py  logging.py  ops.py
spark_app/common/config/: __init__.py  loader.py  merge.py
spark_app/common/datasets/: __init__.py  context.py  models.py  registry.py
spark_app/common/datasets/types/: path.py  table.py
spark_app/config/aws/: global-config.yaml
spark_app/config/homelab/: global-config.yaml
spark_app/config/local/: global-config.yaml
spark_app/config/sandbox/: global-config.yaml
spark_app/sample/hello_world/: app.py  config.yaml
spark_app/sample/orders_ingest/: app.py  config.yaml
spark_app/sample/orders_summary/: app.py  config.yaml
tests/: conftest.py  test_app_factory.py  test_catalog_ddl.py  test_config_loader.py  test_datasets.py  test_spark_app_base.py  test_spark_batch_app_base.py  test_spark_ops_app_base.py
