[project]
name = "data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyspark==4.1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "jupyterlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spark_app"]

[tool.ruff]
line-length = 120
